--- a/_config.yml
+++ b/_config.yml
@@ -297,7 +297,8 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: single
+      layout: posts
       author_profile: true
       toc: true
+      entries_layout: grid
 
