--- a/_config.yml
+++ b/_config.yml
@@ -287,6 +287,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
+      show_date: true
       comments: # true
       share: true
       related: true
@@ -297,7 +298,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: posts
+      layout: single
       author_profile: true
       toc: true
       entries_layout: grid
