--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
-  - title: "Projects"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "Blog Posts"
-  - url: /blog/
-  - title: "About"
+  - title: Projects
+    url: /projects/
+  - title: Blog
+    url: /blog/
+  - title: About
     url: /about/
   # - title: "Sample Collections"
   #   url: /collection-archive/
