--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: Projects
     url: /projects/
-  - title: Blog
-    url: /blog/
+  #- title: Blog
+  #  url: /blog/
   - title: About
     url: /about/
   # - title: "Sample Collections"
