--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : #"Your Name"
-  avatar           : "/assets/images/profile.jpg"
+  avatar           : "/assets/images/profile.PNG"
   bio              : #"I am an **amazing** person."
   location         : "San Francisco, California, US"
   email            :
